feat: bundler [parsing]

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/parser": "^7.23.9",
     "http": "0.0.1-security",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
